# parallel_programming

./: .gitignore  CMakeLists.txt  problem_1.c  problem_1.md  problem_2.ipynb  problem_2.md  problem_3.c  problem_4.c  problem_4.md
python_part/: generate_experiments.py  generate_experiments_task1.py  generate_experiments_task2.py  generate_experiments_task4.py  task2_experiments.ipynb  test_malloc_vs_alignedloc.py  test_malloc_vs_alignedloc_diff_n.py  time_sort_program.py  timing_helper.py  timing_parser.py
python_part/results/: timings_sequential.csv
